added missing cache resets